library/tests/fy_py_files/test_fy_py_files/invalid_fy_code_raises_correct_error/method_invalid_abstract_mixins/method_invalid_abstract_mixin_fy.py
"""fy
method greet(greeting: str) -> int using constant:
    property greeting using greet
"""
